[package]
name = "contract_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract-metadata="1.5.1"
contract-transcode="0.2.0"
subxt="0.24.0"
sp-core = "7.0.0"
sp-weights = "4.0.0"
scale = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
serde="*"
serde_json="*"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }