[package]
name = "staking_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonsaidb = { version = "*", features = ["local-full"] }
contract_events={version="*",path="../contract_events"}
serde = { version = "1", features = ["derive"] }
